fixes #35 - alignment of downloads rows incorrect

--- a/assets/sass/pages/_downloads.scss
+++ b/assets/sass/pages/_downloads.scss
@@ -54,6 +54,8 @@
     grid-row-gap: 1.5em;
 
     .download {
+      height: 100%;
+      
       img {
         width: 100%;
       }
